@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.101 2002/09/10 20:01:00 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.102 2002/09/11 20:52:24 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -247,12 +247,14 @@ AC_SUBST(BFD_CXXFLAGS)
 
 AC_PATH_XTRA 
 LIBS="$X_PRE_LIBS $LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
-QT2_DO_IT_ALL
-if test "$have_qt" == "no"; then
-	QT3_DO_IT_ALL
-fi
+QT_DO_IT_ALL
  
 # do NOT put tests here, they will fail in the case X is not installed !
+ 
+if test -n "$QT_LIB"; then
+	have_qt=yes
+	AC_SUBST(have_qt)
+fi
  
 AC_OUTPUT(make.common \
 	Makefile \
@@ -275,6 +277,6 @@ AC_OUTPUT(make.common \
 	module/arch/Makefile \
 	version.h)
 
-if test "$have_qt" != "yes"; then
-	echo "Warning: Qt2 nor Qt3 not found; no GUI will be built"
+if test -z "$QT_LIB"; then
+	echo "Warning: a working Qt not found; no GUI will be built"
 fi
