@@ -1,3 +1,9 @@
+2002-09-11  John Levon  <levon@movementarian.org>
+
+	* acinclude.m4:
+	* configure.in:
+	* gui/Makefile.in: replace with new Qt configure script
+ 
 2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* acinclude.m4: fix qt3 detection in some corner case.
